--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Day3 Tasks</title>
 </head>
 <body>
-    <center><h2>DAY:2-Heading_paragraph_Anchor_Tags</h2></center>
+    <center><h2>DAY:3-Heading_paragraph_Anchor_Tags</h2></center>
         <a href="./Heading_pra_anchor_tags/Bike.html">Task1</a>
         <br>
         <a href="./Heading_pra_anchor_tags/Instagram.html">Task2</a>
@@ -18,7 +18,7 @@
         <a href="./Heading_pra_anchor_tags/WhatsApp.html">Task5</a>
         <br>
         <br>
-        <h2>Day:2-Text Formatting Tags</h2>
+        <center><h2>Day:3-Text Formatting Tags</h2></center>
         <br>
         <a href="./Text_Formatting_Tags/Bangalore.html">Task1</a>
         <br>
